# RobotControl2024

./: CMakeLists.txt  README.md  package.xml
include/Eigen/src/Core/: Matrix.h
launch/: pongbot_q.launch
pongbot_model/PONGBOT_Q_V1.5/: CMakeLists.txt  model.config  model.sdf  package.xml
pongbot_model/PONGBOT_Q_V1.5/config/: joint_names_PONGBOT_Q_V1.5.yaml
pongbot_model/PONGBOT_Q_V1.5/launch/: display.launch  gazebo.launch
pongbot_model/PONGBOT_Q_V1.5/meshes/: FR_CALF.STL  FR_THIGH.STL  RL_CALF.STL  RL_TIP.STL
pongbot_model/PONGBOT_Q_V1.5/urdf/: PONGBOT_Q_V1.5.csv  PONGBOT_Q_V1.5.gv  PONGBOT_Q_V1.5.urdf
pongbot_model/PONGBOT_Q_V2.0/: CMakeLists.txt  model.config  model.sdf  package.xml
pongbot_model/PONGBOT_Q_V2.0/launch/: display.launch  gazebo.launch
pongbot_model/PONGBOT_Q_V2.0/meshes/: FL_CALF.STL  FL_THIGH.STL  FL_TIP.STL  FR_TIP.STL  RL_THIGH.STL  RR_CALF.STL  RR_THIGH.STL  RR_TIP.STL
pongbot_model/PONGBOT_Q_V2.0/urdf/: PONGBOT_Q_V2.0.csv  PONGBOT_Q_V2.0.gv  PONGBOT_Q_V2.0.urdf
pongbot_model/PONGBOT_W/: CMakeLists.txt  model.config  model.sdf  package.xml
pongbot_model/PONGBOT_W/config/: joint_names_PONGBOT_W.yaml
pongbot_model/PONGBOT_W/launch/: display.launch  gazebo.launch
pongbot_model/PONGBOT_W/meshes/: FL_THIGH.STL  FL_WHEEL.STL  FR_THIGH.STL  RL_THIGH.STL  RL_WHEEL.STL  RR_THIGH.STL  RR_WHEEL.STL
pongbot_model/PONGBOT_W/urdf/: PONGBOT_W.csv  PONGBOT_W.gv  PONGBOT_W.urdf
pongbot_model/slope_object/: model.config  model.sdf
pongbot_model/stair (10cm)/: model.config  model.sdf
pongbot_model/stair (5cm)/: model.config  model.sdf
pongbot_model/stair (7cm)/: model.config  model.sdf
qp_practice/: qp_practice.cpp  qp_practice.h
src/: pongbotq_plugin.cc
src/CRobot/: CRobot.cpp  CRobot2.h  CRobot3.h  GaitScheduling.h  RobotObj.h
src/CRobot/CRobotBackup/: CRobot(230618 A_qp B_qp 까지 제작).cpp  CRobot(230619 mpc osqp 전까지 제작).cpp  CRobot(230621까지 큰변동없음).cpp  CRobot(230625까지).cpp  CRobot(230626까지의 내용물 컴파일과 실행은 돼지만 구동성능이상).cpp  CRobot(230627 저녁까지 제자리버티기성공 근데왜성공).cpp  CRobot(230630 까지_ B_c 이상해보임).cpp  CRobot(230705 prismatic 걸고 xyz 게인이 얼추 찾아진 느낌).cpp  CRobot(230705 진행중 진동).cpp  CRobot(230706 최종 밸런싱).cpp  CRobot(230707 갯수 10개로 늘리고 게인튜닝 후 보행해봄).cpp  CRobot(230710 시간 오래 걸리는 부분 측정 중).cpp  CRobot(230711 연산 시간 개선).cpp  CRobot(230711 연산속도개선 이후 궤적생성 오류수정중).cpp  CRobot(230712 궤적수정 일단은 z축에 대해서는 마무리).cpp  CRobot(230712 궤적수정중 내부 static 사용).cpp  CRobot(230717).cpp  CRobot(230718 다리벡터 렌치부분만 다시 컨택미적용).cpp  CRobot(230719 트롯 성공).cpp  CRobot(230721).cpp  CRobot(230721).h  CRobot(until 230501).cpp  CRobot(until 230618 something wrong).cpp
src/CRobot/CRobotBackup/231004/: CRobot.cpp  CRobot.h  pongbotq_plugin.cc
src/CRobot/CRobotBackup/231010 (trot 미래궤적 고치기 전)/: CRobot.cpp  pongbotq_plugin.cc
src/CRobot/CRobotBackup/231011 (trot 미래궤적은 고침)/: CRobot.cpp  CRobot.h  pongbotq_plugin.cc
src/CRobot/CRobotBackup/231012 (미래 contact 및 속도 레퍼런스 리얼 업데이트. 단 초기 깨짐)/: CRobot.cpp  CRobot.h  pongbotq_plugin.cc
src/CRobot/CRobotBackup/231012 (일단 미래 트롯)/: CRobot.cpp  CRobot.h  pongbotq_plugin.cc
src/CRobot/CRobotBackup/231018 제자리 워크 (프리뷰 없음)/: CRobot.cpp  CRobot.h  pongbotq_plugin.cc
src/CRobot/CRobotBackup/231019 (느린 주기의 프리뷰 제자리보행)/: data_10s_to_17s.txt  data_3s_to_10s.txt  data_until3s.txt  pongbotq_plugin.cc
src/CRobot/nrutil/: nrlin.cpp  nrlin.h  nrutil.cpp
worlds/: pongbot_q_robotcontrol2024.world
(+38 files in other folders)
